--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
     /*background-image: url(background-texture.jpg);*/
     background-color: #afbebe;
     /*background-size: cover;*/
-    /*width: 100vw;*/
+    width: 100vw;
     min-height: 100vh;
     /*height: 100%;*/
     min-width: 100%;
