--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 .App {
-    text-align: center;
+ /*   text-align: center;*/
     /*background-image: url(background-texture.jpg);*/
     background-color: #afbebe;
     /*background-size: cover;*/
@@ -78,7 +78,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+  /*align-items: center;*/
 }
 
 .button:hover{
