--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,11 +3,11 @@
     /*background-image: url(background-texture.jpg);*/
     background-color: #afbebe;
     /*background-size: cover;*/
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     /*height: 100%;*/
     min-width: 100%;
-    /*overflow: auto;*/
+    overflow: auto;
     /*margin-left: auto;
     margin-right: auto;*/
 
