--- a/frontend/src/components/modules/sklad_main/main_page.css
+++ b/frontend/src/components/modules/sklad_main/main_page.css
@@ -2,7 +2,7 @@
 .Table_pol{
     display: flex;
     flex-direction: column;
-    width: 98%;
+    width: 250px;
     margin-right: 10px;
     margin-left:25px;
     margin-top: 20px;
@@ -10,7 +10,16 @@
 .Table_head{
     color:black;
     background-color: burlywood;
+    font-size: 10pt;
 }
 .Table_text{
     color:rgb(59, 27, 1);
+    text-align: center;
+}
+.ButAdd{
+    width: 35px;
+    height: 15px;
+    color: white;
+    background-color: rgb(5, 168, 5);
+    border-color: darkgreen;
 }
