--- a/frontend/src/components/modules/spr/table_find.css
+++ b/frontend/src/components/modules/spr/table_find.css
@@ -3,6 +3,9 @@
     border-color: chartreuse;
     width: 500px;
     display: grid;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     grid-template-rows: 1fr ;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: 
@@ -37,4 +40,5 @@
     grid-area: chk;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
