--- a/frontend/src/components/modules/spr/table_find.css
+++ b/frontend/src/components/modules/spr/table_find.css
@@ -1,10 +1,12 @@
 .Blocks{
     border-style: solid;
-    border-color: chartreuse;
+    border-color: rgb(34, 65, 2);
     width: 500px;
     display: grid;
-    flex-direction: column;
-    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 650px;
+    margin-right: 200px;
     align-items: center;
     grid-template-rows: 1fr ;
     grid-template-columns: 1fr 1fr;
@@ -12,8 +14,10 @@
                        "lab_one  lab_sec"
                        "txt  chk";
     background-color: rgb(52, 97, 8);
-    margin-left:200px;
-    margin-top: 15px;
+    border-radius: 15px;
+    color: rgb(41, 1, 1);
+    font-weight: 600;
+   
 }
 .lab_one{
     grid-area: lab_one;
@@ -29,7 +33,7 @@
     grid-area: txt;
     display: flex;
     flex-direction: column;
-    margin-left: 15px;
+    margin-left: 5px;
     margin-bottom: 5px;
     resize: none;
     text-align: left;
@@ -39,6 +43,12 @@
 .chk{
     grid-area: chk;
     display: flex;
-    flex-direction: column;
+    flex-direction: block;
     align-items: center;
+    margin-right: 5px;
+}
+.TxtSett{
+    display: table-row;
+    font-size: 10pt;
+    text-align: center;
 }
