--- a/frontend/src/components/modules/header/header.css
+++ b/frontend/src/components/modules/header/header.css
@@ -31,10 +31,17 @@
 .Link{
     text-decoration: none;
     color: rgb(24, 20, 20);
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
+    padding-right: 10px;
     font-size: 14pt;
+    border: 2px inset rgb(1, 77, 1);
+    background-color: rgb(5, 92, 5);
+    border-top-right-radius: 5px ;
+    border-bottom-right-radius: 5px ;
+    font-weight: 700;
+   
 
 }
