--- a/frontend/src/components/modules/sklad_main/form_work.css
+++ b/frontend/src/components/modules/sklad_main/form_work.css
@@ -1,27 +1,31 @@
 .modal{
     position:fixed;
-    display: block;
-    flex-direction: column;
-    justify-content: center;
+    width: 150px;
+    height: 200px;
+    background-color: rgba(207, 207, 207);
     align-items: center;
-    text-align: center;
-    top: 80px;
-    bottom: 550px;
-    left:800px;
-    right: 800px;
-    background-color: rgb(207, 207, 207);
     border-radius: 10px;
     color: black;
     border: 1px solid #707270;
     box-shadow: 0 0 10px rgb(80, 80, 80);
+    overflow: auto;
     padding: 10px;
+    margin:auto;
+    top: 80px;
+    bottom: 250px;
+    left:800px;
+    right: 800px;
+    z-index: 10000;
+    
     
 }
 .modal_pos {
+    position: fixed;
     display: block;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 .modal_arch{
     position:fixed;
@@ -34,8 +38,10 @@
     border-radius: 10px;
     color: black;
     border: 1px solid #707270;
+    padding-bottom: 15px;
     box-shadow: 0 0 10px rgb(80, 80, 80);
     padding: 10px;
+    padding-top: 15px;
     
 }
 .modal_pos_arch{
@@ -44,34 +50,65 @@
     justify-content: center;
     align-items: center;
 }
-.label_txt{
-    text-align: center;
-    margin-top: 25px;
-    
-}
+
 .modal_add{
     width: 300px;
     height: 450px;
+    position: fixed;
+    top:70px;
+    left:750px;
     border: 1px solid #707270;
     box-shadow: 0 0 10px rgb(80, 80, 80);
     background-color: rgb(207, 207, 207);
+
 }
 .modal_pos_add{
     display: block;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     font-size: 10pt;
+    padding-bottom: 10px;
+    padding-top: 10px;
 } 
 .ButChoose{
     display:block;
     flex-direction: column;
     justify-content: center;
     width: 100px;
-    height: 31px;
+    height: 32px;
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 20px;
     align-items: center;
     text-align: center;
     font-size: 10pt;
+}
+.label_txt{
+font-size: 12pt;
+padding-top: 10px;
+}
+.ButtonCh{
+    position:relative;
+    margin-top:10px;
+    margin-left: 5px;
+    width: 100px;
+    height: 30px;
+    border-radius: 20px;
+}
+.NaimPole{
+    text-align: left;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+.AreaTxt{
+    width: 120px;
+    height: 15px;
+    margin-left: 5px;
+}
+.SelectPole{
+    margin-left: 5px;
+
+}
+.ButNaim{
+    margin-top: 10px;
+    margin-left: 5px;
 }
