--- a/frontend/src/components/modules/sklad_main/main_page.css
+++ b/frontend/src/components/modules/sklad_main/main_page.css
@@ -2,10 +2,12 @@
 .Table_pol{
     display: flex;
     flex-direction: column;
-    width: 250px;
+    width: 98%;
     margin-right: 10px;
-    margin-left:25px;
     margin-top: 20px;
+    margin-left: 10px;
+    z-index:15;
+    
 }
 .Table_head{
     color:black;
