--- a/frontend/src/components/modules/spr/table_find.css
+++ b/frontend/src/components/modules/spr/table_find.css
@@ -33,7 +33,6 @@
     grid-area: txt;
     display: flex;
     flex-direction: column;
-    margin-left: 5px;
     margin-bottom: 5px;
     resize: none;
     text-align: left;
@@ -51,4 +50,13 @@
     display: table-row;
     font-size: 10pt;
     text-align: center;
+}
+.FindAndReset{
+    width: 150px;
+    height: 25px;
+    margin-left: 60px;
+    margin-top:10px;
+    margin-bottom: 10px;
+    text-align: center;
+    border-radius: 10px;
 }
