--- a/frontend/src/components/modules/sklad_main/form_work.css
+++ b/frontend/src/components/modules/sklad_main/form_work.css
@@ -52,14 +52,17 @@
 }
 
 .modal_add{
-    width: 300px;
-    height: 450px;
+    width: 350px;
+    height: 475px;
     position: fixed;
     top:70px;
     left:750px;
     border: 1px solid #707270;
     box-shadow: 0 0 10px rgb(80, 80, 80);
     background-color: rgb(207, 207, 207);
+    border-radius: 10px;
+    z-index:10000;
+    
 
 }
 .modal_pos_add{
@@ -108,9 +111,15 @@ padding-top: 10px;
     margin-left: 5px;
 
 }
-.ButNaim{
-    margin-top: 10px;
-    margin-left: 5px;
+.ButNaim_s{
+    margin-top: 15px;
+    margin-left:5px;
+    position: relative;
+    left:20%;
+    background-color: rgb(51, 192, 138);
+    border-color:rgb(47, 151, 111) ;
+    border-radius: 15px;
+    
 }
 .FonMod{
     position: absolute; ;
@@ -123,4 +132,35 @@ padding-top: 10px;
     left:0;
     right:0 ;
 
+}
+.ButNaim_cl{
+    margin-left:5px;
+    margin-top: 15px;
+    position: relative;
+    left:30%;
+    background-color: rgb(196, 148, 45);
+    border-color:rgb(163, 127, 27) ;
+    border-radius: 15px;
+}
+.ButNaim_ch{
+    margin-left:5px;
+    margin-top: 15px;
+    position: relative;
+    left:27%;
+    background-color: rgb(194, 79, 26);
+    border-color:rgb(165, 72, 10) ;
+    border-radius: 15px;
+}
+.Zap{
+    color: black;
+}
+.Names{
+    position: relative;
+    left:30%;
+    font-weight: 500;
+    font-size: 12pt;
+}
+.Hover:hover{
+    background-color: rgb(189, 231, 126);
+    cursor:pointer;
 }
