--- a/frontend/src/components/modules/sklad_main/form_work.css
+++ b/frontend/src/components/modules/sklad_main/form_work.css
@@ -192,3 +192,13 @@ padding-top: 10px;
     background-color: rgb(82, 23, 8);
     border-color: rgb(59, 8, 1);
 }
+.forFrom{
+    width: 250px;
+}
+.Primch{
+    width: 300px;
+    
+}
+.s{
+    resize:none
+}
