--- a/frontend/src/components/modules/sklad_main/main_page.css
+++ b/frontend/src/components/modules/sklad_main/main_page.css
@@ -100,8 +100,8 @@
 .ButSet{
     position: relative;
     left:40%;
-    width: 30px;
-    height: 15px;
+    width: 50px;
+    height: 20px;
    
 }
 .Changer{
@@ -116,4 +116,5 @@
     left:30%;
     padding-top: 5px;
     padding-bottom: 10px;
+    resize: none;
 }
